updated the filenames!

--- a/Floquet_IBM_new.ipynb
+++ b/Floquet_IBM_new.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
      "output_type": "stream",
      "text": [
       "The simulation parameters are ... \n",
-      "GDt is 0.6931471805599453 Gamma = 1.0 V=[0.0] hs = [1. 2.] Gamma_list = [array([1.]), [0.5, 0.5]] Delta_t = 0.6931471805599453 time = 0.6931471805599453 Omega = 0.0 Number of time steps = 1\n"
+      "GDt is 0.6931471805599453 Gamma = 1.0 V=[1.0] hs = [2. 1.] Gamma_list = [array([1.]), [0.5, 0.5]] Delta_t = 0.6931471805599453 time = 0.6931471805599453 Omega = 0.0 Number of time steps = 1\n"
      ]
     }
    ],
@@ -75,9 +75,9 @@
     "Coeffs = C0*np.array([2+(-1)**x for x in np.arange(1,number_of_spins)]) # there are n elements in this array\n",
     "Omega = 0.0\n",
     "h0 = 1.0\n",
+    "V0 = 1.0\n",
     "Longit_h = h0*np.array([1.5 + 0.5*(-1)**x for x in range(number_of_spins)])\n",
-    "Longit_h = np.array([1. , 2.])\n",
-    "Vx = [0.0]*M\n",
+    "Vx = [V0]*M\n",
     "C = np.max(Coeffs)\n",
     "\n",
     "Gammas_i = Coeffs\n",
@@ -89,16 +89,15 @@
     "Gamma = Gamma_2 * Gamma_1\n",
     "Gamma_list = [Gammas_i , Gammas_k]\n",
     "\n",
-    "if Gamma < 0.5:\n",
-    "    Delta_t = np.log(2)\n",
-    "else:\n",
-    "    Delta_t = np.log(2)/(Gamma)\n",
-    "GDt = Gamma*Delta_t\n",
     "\n",
-    "sfactor = np.sqrt(1 + GDt + GDt**2)\n",
+    "Delta_t = np.log(2)/(Gamma)\n",
+    "if Gamma/(np.max([h0 , V0])) > 0.25:\n",
+    "    Delta_t = Delta_t / 1.0\n",
     "\n",
-    "NumberOfTimeSteps = 1\n",
-    "FinalTime = NumberOfTimeSteps*Delta_t\n",
+    "GDt = Gamma * Delta_t\n",
+    "FinalTime = np.log(2)\n",
+    "\n",
+    "NumberOfTimeSteps = int(FinalTime / Delta_t)\n",
     "\n",
     "print(f'The simulation parameters are ... ')\n",
     "print(f'GDt is {GDt} Gamma = {Gamma} V={Vx} hs = {Longit_h} Gamma_list = {Gamma_list} Delta_t = {Delta_t} time = {FinalTime} Omega = {Omega} Number of time steps = {NumberOfTimeSteps}')"
@@ -113,15 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The exact vector is [-0.581952+0.771491j  0.      +0.j        0.      +0.j\n",
-      "  0.      -0.257164j]\n"
+      "The filename is ./Exact_Results/FinalState_n=2_gam=1.0_omega=0.0_time=Log[2]_init00.json\n",
+      "The exact vector is [-0.940613-0.221616j  0.      +0.j        0.      +0.j\n",
+      " -0.164318-0.19782j ]\n"
      ]
     }
    ],
@@ -133,7 +133,9 @@
     "# with open(\"./Exact_Results/FinalState_params1_numoftimestep_\"+str(NumberOfTimeSteps)+\"_init_\"+InitialStateString+\".json\", \"r\") as f:\n",
     "    # data = json.load(f)\n",
     "\n",
-    "with open(\"./Exact_Results/FinalState_testparV=0_numoftimestep_\"+str(NumberOfTimeSteps)+\"_init_\"+InitialStateString+\".json\", \"r\") as f:\n",
+    "filename = \"./Exact_Results/FinalState_n=\"+str(number_of_spins)+\"_gam=\"+str(C0)+\"_omega=\"+str(Omega)+\"_time=Log[2]_init\"+InitialStateString+\".json\"\n",
+    "print(f'The filename is {filename}')\n",
+    "with open(filename, \"r\") as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "# Extract the first term (complex number) from each entry\n",
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,20 +188,8 @@
     "FullCirc = qk.QuantumCircuit( kqQubits , iqQubits , zQubits , qQubits , ancQubit )\n",
     "FullCircwithPS = qk.QuantumCircuit( kqQubits , iqQubits , zQubits , qQubits , ancQubit )\n",
     "\n",
-    "\n",
-    "numberofsteps = FinalTime\n",
-    "# Prepare_full_unitary( FullCirc , [Longit_h , Vx] , Omega , Delta_t , Gamma_list , [kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbits_index , anc_qbits_index] , NumberOfTimeSteps )\n",
-    "\n",
-    "\n",
+    "Prepare_full_unitary( FullCirc , [Longit_h , Vx] , Omega , Delta_t , Gamma_list , [kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbits_index , anc_qbits_index] , NumberOfTimeSteps )\n",
     "Prepare_full_unitary_wo_Rgate( FullCircwithPS , [Longit_h , Vx] , Omega , Delta_t , Gamma_list , [kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbits_index , anc_qbits_index] , NumberOfTimeSteps )\n",
-    "\n",
-    "# FullCircwithPS.ry(2*GDt ,iqQubits[0])\n",
-    "# FullCircwithPS.cx(iqQubits[0] , qQubits[0])\n",
-    "\n",
-    "# Uc_Phi(FullCircwithPS , M , [Longit_h , Vx] , Delta_t , Qmax , iq_qbits_index , z_qbits_index , q_qbits_index , False)\n",
-    "\n",
-    "# FullCircwithPS.cx(iqQubits[0] , qQubits[0]) \n",
-    "# FullCircwithPS.ry(-2*GDt ,iqQubits[0])\n",
     "\n",
     "\n",
     "#backend_sim = Aer.get_backend('qasm_simulator')\n",
@@ -219,30 +209,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The initial state is Statevector([0.70710678+0.j, 0.        +0.j, 0.        +0.j,\n",
-      "             0.70710678+0.j],\n",
+      "The initial state is Statevector([1.+0.j, 0.+0.j, 0.+0.j, 0.+0.j],\n",
       "            dims=(2, 2))\n",
-      "The normalization factor is 0.6228322506164639\n",
-      "The Post selected state is [-0.39448369-0.82977001j  0.        +0.j          0.        +0.j\n",
-      " -0.39448369+0.01571536j]\n",
-      "l1 is 4 and l2 is 4\n",
-      "The overlap of the Post selected with the exact is (-0.25824552546764556-0.42712585592884067j)\n",
-      "l1 is 4 and l2 is 4\n",
-      "The overlap of the Post selected with the exact is (-0.41150220552507366+0.3636841094473334j)\n"
+      "The normalization factor is 0.6228322506164634\n",
+      "The Post selected state is [-0.81114821-0.10342188j  0.        +0.j          0.        +0.j\n",
+      " -0.36780117-0.44279204j]\n",
+      "The overlap of the Post selected with the one without is 0.8137129188831416\n",
+      "The overlap of the Post selected with the exact is 0.879021197500223\n"
      ]
     }
    ],
    "source": [
     "# Initializing the |z> state:\n",
     "InitStateZ = Statevector.from_label('0'*number_of_spins)\n",
-    "InitStateZ += Statevector.from_label('1'*number_of_spins)\n",
     "InitStateZ = InitStateZ/np.linalg.norm(InitStateZ)\n",
     "\n",
     "print(f'The initial state is {InitStateZ}')\n",
@@ -281,12 +267,13 @@
     "\n",
     "FinalStatePS = post_select_state( FinalStatewoRgate , Niq + Nkq , Qmax+1 )\n",
     "NormalizationPS = np.linalg.norm( FinalStatePS )\n",
+    "FinalStatePS = FinalStatePS / NormalizationPS\n",
     "FinalStatewithR = post_select_state( FinalStateFull , Niq + Nkq , Qmax+1 )\n",
     "\n",
     "print( f'The normalization factor is {NormalizationPS}' )\n",
-    "print( f'The Post selected state is {FinalStatePS/NormalizationPS}' )\n",
-    "print( f'The overlap of the Post selected with the exact is {state_overlap(FinalStatePS , FinalStateExact)}' )\n",
-    "print( f'The overlap of the Post selected with the exact is {state_overlap(FinalStatewithR , FinalStateExact)}' )\n",
+    "print( f'The Post selected state is {FinalStatePS}' )\n",
+    "print( f'The overlap of the Post selected with the one without is {np.abs(state_overlap(FinalStatePS , FinalStatewithR))**2}' )\n",
+    "print( f'The overlap of the Post selected with the exact is {np.abs(state_overlap(FinalStatePS , FinalStateExact))**2}' )\n",
     "# a = (1-1.0j*GDt*np.exp(-3.0j*(Delta_t)))\n",
     "# b = (1-1.0j*GDt*np.exp(3.0j*(Delta_t)))\n",
     "# n = np.sqrt(np.abs(a)**2 + np.abs(b)**2)\n",
